[package]
name = "nwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
tracert = { version = "0.7" } 
trust-dns-resolver = "0.23.2"